@@ -1,3 +1,5 @@
+* #5160: Chat should not autoscroll while you scroll up (morgs)
+
 29
 
 * #5080: add a "copy to clipboard" palette for URL's (cassidy)
